--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <main>
         Ahoj
+        <canvas id="gameCanvas"></canvas>
     </main>
     <script src="./app.js"></script>
     <script>
