Adding grass PA, QOL improvements + deleting old cache

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <main>
-        Ahoj
         <canvas id="gameCanvas"></canvas>
     </main>
-    <script src="./app.js"></script>
+    <script src="./scripts/app.js" defer></script>
     <script>
         navigator.serviceWorker.register('./serviceWorker.js')
         .then((reg) => {
