--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <canvas id="gameCanvas"></canvas>
     </main>
-    <script src="./scripts/app.js" defer></script>
+    <script type="module" src="./scripts/app.js" defer></script>
     <script>
         navigator.serviceWorker.register('./serviceWorker.js')
         .then((reg) => {
