--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <main>
-        <canvas id="gameCanvas"></canvas>
+        <canvas id="gameCanvas" style="position: absolute;"></canvas>
+        <canvas id="playerLayer" style="position: absolute;"></canvas>
     </main>
     <script type="module" src="./scripts/app.js" defer></script>
     <script>
