Adding chicken AI + code refactorization

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <canvas id="gameCanvas" style="position: absolute;"></canvas>
         <canvas id="playerLayer" style="position: absolute;"></canvas>
+        <canvas id="chickenLayer" style="position: absolute;"></canvas>
     </main>
     <script type="module" src="./scripts/app.js" defer></script>
     <script>
