--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             </div>
         </div>
     </main>
+    <div id="menu" class="menu hidden">
+        <div id="mainMenu" class="menu-screen">
+            <h1>Time for Feathers</h1>
+            <button id="startButton">Start Game</button>
+            <button id="recordsButton">Records</button>
+            <button id="settingsButton">Settings</button>
+        </div>
+    </div>
     <script type="module" src="./scripts/app.js" defer></script>
     <script>
         navigator.serviceWorker.register('./serviceWorker.js')
