main menu implementation + starting the game

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="no-select">
     <main>
         <canvas id="gameCanvas"></canvas>
         <canvas id="playerLayer"></canvas>
@@ -35,7 +35,7 @@
             </div>
         </div>
     </main>
-    <div id="menu" class="menu hidden">
+    <div id="menu" class="menu">
         <div id="mainMenu" class="menu-screen">
             <h1>Time for Feathers</h1>
             <button id="startButton">Start Game</button>
