added gameManager class for future current and future menus

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="no-select">
-    <main>
+    <main id="gameContainer">
         <canvas id="gameCanvas"></canvas>
         <canvas id="playerLayer"></canvas>
         <canvas id="chickenLayer"></canvas>
