implemented level completion

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <button id="recordsButton">Records</button>
             <button id="settingsButton">Settings</button>
         </div>
+        <div id="levelCompleted" class="menu-screen">
+            <h1>Level Completed</h1>
+            <button id="nextButton">Next Level</button>
+            <button id="retryButton">Retry</button>
+        </div>
     </div>
     <script type="module" src="./scripts/app.js" defer></script>
     <script>
