implemented level completed screen

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
         <div id="levelCompleted" class="menu-screen">
             <h1>Level Completed</h1>
-            <button id="nextButton">Next Level</button>
-            <button id="retryButton">Retry</button>
+            <button id="nextButton">[ F ] Next Level</button>
+            <button id="retryButton">[ R ] Retry</button>
         </div>
     </div>
     <script type="module" src="./scripts/app.js" defer></script>
