--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div id="bottomInfo">
-                <div id="checkpointContainer" class="info-section"></div>
+                <div id="eventTable" class="info-section"></div>
             </div>
         </div>
     </main>
