dog implementation --part2

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <canvas id="gameCanvas"></canvas>
         <canvas id="playerLayer"></canvas>
         <canvas id="chickenLayer"></canvas>
+        <canvas id="dogLayer"></canvas>
         <div class="game-info-container">
             <div id="topInfo">
                 <div id="levelContainer" class="info-section">
