implemented colision with dog and level failed upon fox being eaten

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <button id="nextButton">[ F ] Next Level</button>
             <button id="retryButton">[ R ] Retry</button>
         </div>
+        <div id="levelFailed" class="menu-screen">
+            <h1>Level Failed</h1>
+            <button id="retryButton">[ R ] Retry</button>
+        </div>
     </div>
     <script type="module" src="./scripts/app/app.js" defer></script>
     <script>
