fixed bug --retry button not working upon level failure

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div id="levelFailed" class="menu-screen">
             <h1>Level Failed</h1>
-            <button id="retryButton">[ R ] Retry</button>
+            <button id="tryAgainButton">[ R ] Retry</button>
         </div>
     </div>
     <script type="module" src="./scripts/app/app.js" defer></script>
