implemented farmer --todo: shooting

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <canvas id="playerLayer"></canvas>
         <canvas id="chickenLayer"></canvas>
         <canvas id="dogLayer"></canvas>
+        <canvas id="farmerLayer"></canvas>
         <canvas id="itemLayer"></canvas>
         <div class="game-info-container">
             <div id="topInfo">
