minor changes plus known bug --farmer getting deleted

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <canvas id="dogLayer"></canvas>
         <canvas id="farmerLayer"></canvas>
         <canvas id="itemLayer"></canvas>
+        <canvas id="bulletLayer"></canvas>
         <div class="game-info-container">
             <div id="topInfo">
                 <div id="levelContainer" class="info-section">
