adding menu image and level failed transition

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <button id="tryAgainButton">[ R ] Retry</button>
         </div>
     </div>
+    <div class="fade-overlay"></div>
     <script type="module" src="./scripts/app/app.js" defer></script>
     <script>
         navigator.serviceWorker.register('./serviceWorker.js')
